--- a/net-il-mio-fotoalbum/Views/Home/Privacy.cshtml
+++ b/net-il-mio-fotoalbum/Views/Home/Privacy.cshtml
@@ -1,6 +1,37 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "Informativa sulla privacy";
 }
-<h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<div  class="container pt-4">
+    <div id="privacyContainer" class="py-3 px-3">
+        <h1 class="mb-4 ">@ViewData["Title"]</h1>
+
+        <p>
+            La tua privacy è importante per noi. Di seguito, spieghiamo quali informazioni raccogliamo, come le utilizziamo e le proteggiamo.
+        </p>
+
+        <h3 class="mt-2">Informazioni raccolte</h3>
+        <p>
+            Quando utilizzi il nostro sito web, raccogliamo informazioni sull'utilizzo del sito, come ad esempio quali pagine visiti e quali azioni compi. Inoltre, se decidi di contattarci tramite il form di contatto, raccogliamo il tuo indirizzo email e il messaggio che ci invii.
+        </p>
+
+        <h3 class="mt-2">Utilizzo delle informazioni</h3>
+        <p>
+            Utilizziamo le informazioni raccolte per migliorare il nostro sito web e i nostri servizi, e per rispondere alle tue richieste di contatto. In nessun caso vendiamo o condividiamo le tue informazioni con terze parti.
+        </p>
+
+        <h3 class="mt-2">Protezione delle informazioni</h3>
+        <p>
+            Ci impegniamo a proteggere le tue informazioni personali e ad adottare misure di sicurezza adeguate per prevenire l'accesso non autorizzato, la modifica o la divulgazione delle informazioni che raccogliamo.
+        </p>
+
+        <h3 class="mt-2">Modifiche alla politica sulla privacy</h3>
+        <p>
+            Ci riserviamo il diritto di modificare la presente politica sulla privacy in qualsiasi momento. Ti consigliamo di verificare periodicamente se sono state apportate modifiche.
+        </p>
+
+        <p>
+            Se hai domande o dubbi riguardo alla nostra politica sulla privacy, non esitare a contattarci.
+        </p>
+    </div>
+</div>
