--- a/net-il-mio-fotoalbum/Views/Home/Index.cshtml
+++ b/net-il-mio-fotoalbum/Views/Home/Index.cshtml
@@ -1,8 +1,12 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
-
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+﻿<div class=" container">
+    <div class="mb-4">
+        <div class="d-flex justify-content-center">
+            <h1 class="fst-italic text-white" style="font-size:5vw;">
+                Entra nei Ricordi
+            </h1>
+        </div>
+        <div class="text-center mt-4">
+            <a class="text-decoration-none text-white fs-4 fw-semibold" asp-area="" asp-controller="Photo" asp-action="Index">Clicca per Entrare </></a>
+        </div>
+    </div>
 </div>
