da sistemare view form

--- a/net-il-mio-fotoalbum/Views/Home/Index.cshtml
+++ b/net-il-mio-fotoalbum/Views/Home/Index.cshtml
@@ -5,8 +5,10 @@
                 Entra nei Ricordi
             </h1>
         </div>
-        <div class="text-center mt-4">
-            <a class="text-decoration-none text-white fs-4 fw-semibold" asp-area="" asp-controller="Photo" asp-action="Index">Clicca per Entrare </></a>
+        <div class="d-flex justify-content-center gap-3 mt-4">
+            <a class="btn btn-dark fs-4 fw-semibold" asp-area="" asp-controller="Photo" asp-action="Index">Clicca per Entrare</a>
+            <a class="btn btn-info fs-4 fw-semibold" asp-area="" asp-controller="Photo" asp-action="Form">Contattaci</a>
         </div>
+        
     </div>
 </div>
