--- a/net-il-mio-fotoalbum/Views/Photo/Index.cshtml
+++ b/net-il-mio-fotoalbum/Views/Photo/Index.cshtml
@@ -13,7 +13,10 @@
                     <input type="text" class="form-control" name="searchString" placeholder="Cerca per nome" value="@ViewBag.SearchString">
                     <div class="input-group-append">
                         <button type="submit" class="btn btn-primary"><i class="fa fa-search"></i></button>
-                        <a class="btn btn-dark" href="@Url.Action("Create", "Photo")">Aggiungi Foto</a>
+                        @if(User.IsInRole("ADMIN"))
+                        {
+                            <a class="btn btn-dark" href="@Url.Action("Create", "Photo")">Aggiungi Foto</a>
+                        }
                     </div>
                 </div>
             </form>
@@ -27,36 +30,42 @@
         }
         else
         {
-        @foreach (var photo in Model)
-        {
-            <div class="col-md-4 mb-3">
-                <div class="card">
-                    <img class="card-img-top" src="@photo.Image" alt="@photo.Title" />
-                    <div class="card-body">
-                        <h5 class="card-title">@photo.Title</h5>
-                        <p class="card-text">@photo.Description</p>
-                        <div>
-                            <strong>Categorie:</strong>
-                            @foreach (var category in photo.Categories)
-                            {
-                                <a href="@Url.Action("Index", "Photos", new { categoryId = category.Id })">@category.Title</a>
-                                if (category != photo.Categories.Last())
-                                {
-                                    <span>, </span>
-                                }
-                            }
+            @foreach (var photo in Model)
+            {
+                    @if (User.IsInRole("ADMIN") || photo.Visible == true)
+                    {
+                       <div class="col-md-3 mb-3">
+                            <div class="card h-100">
+                                <img class="card-img-top" src="@photo.Image" alt="@photo.Title" />
+                                <div class="card-body">
+                                    <h5 class="card-title text-black">Titolo: @photo.Title</h5>
+                                    <p class="card-text text-black">Descrizione: @photo.Description</p>
+                                    <div>
+                                        <strong class="text-black mb-2">Categorie:</strong>
+                                        
+                                        <ul class="row">
+                                            @foreach (var category in photo.Categories)
+                                            {                        
+                                                    <li class="text-black small text-start text-decoration-none">@category.Title</li>
+                                            }
+                                        </ul>
+                                    </div>                              
+                                    <div class="d-flex flex-wrap gap-1 mt-auto justify-content-between y-2">
+                                        <a href="@Url.Action("Details", "Photo", new { id = photo.Id })" class="btn btn-primary">Dettagli</a>
+                                        @if (User.IsInRole("ADMIN"))
+                                        {                          
+                                            <a class="btn btn-warning" href="@Url.Action("Update", "Photo", new {id = photo.Id})">Modifica</a>                                  
+                                            <form asp-controller="Photo" asp-action="Delete" asp-route-id="@photo.Id" method="post">
+                                                @Html.AntiForgeryToken()
+                                                <button type="submit" class="btn btn-dark">Elimina</button>
+                                            </form>   
+                                        }
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <a href="@Url.Action("Details", "Photos", new { id = photo.Id })" class="btn btn-primary mt-2">Dettagli</a>
-                        @*<form asp-controller="Pizza" asp-action="Delete" asp-route-id="@Photo.Id" method="post">
-                            @Html.AntiForgeryToken()
-                            <button type="submit" class="btn btn-dark">Delete</button>
-                          </form>*@
-                    </div>
-                </div>
-            </div>
-        }
+                        }             
+            }
         }
     </div>
-                        @*@if (User.IsInRole("Admin"))*@                     
-                           @* <a class="btn btn-warning" href="@Url.Action("Update", "Photo", new {id=item.Id})">Edit</a>*@
 </div>
