--- a/net-il-mio-fotoalbum/Views/Home/Index.cshtml
+++ b/net-il-mio-fotoalbum/Views/Home/Index.cshtml
@@ -7,8 +7,9 @@
         </div>
         <div class="d-flex justify-content-center gap-3 mt-4">
             <a class="btn btn-dark fs-4 fw-semibold" asp-area="" asp-controller="Photo" asp-action="Index">Clicca per Entrare</a>
-            <a class="btn btn-info fs-4 fw-semibold" asp-area="" asp-controller="Photo" asp-action="Form">Contattaci</a>
+            <a class="btn btn-info fs-4 fw-semibold" asp-area="" asp-controller="Messages" asp-action="Create">Contattaci</a>
         </div>
         
+        @Html.Partial("_Index")
     </div>
 </div>
